make a couple of blank routes

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
-	<h4>hello</h4>
-	<div>world</div>
-</body>
-</html>
+<div class="container">
+	<div class="row">
+		<div class="col-md-6">
+			<div class="selection">
+				<a href="/fired-up">
+					<p>I'm Fired Up</p>
+				</a>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="selection">
+				<a href="/burned-out">
+					<p>I'm Burned Out</p>
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
