--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,15 +2,17 @@
 	<div class="row">
 		<div class="col-md-6">
 			<div class="selection">
-				<a href="/fired-up">
-					<p>I'm Fired Up</p>
+				<a href="/fired-up" id="fired-up">
+					<img class="home-img" src="/images/fired_up.jpg">
+					<p class="choice">I'm Fired Up</p>
 				</a>
 			</div>
 		</div>
 		<div class="col-md-6">
 			<div class="selection">
-				<a href="/burned-out">
-					<p>I'm Burned Out</p>
+				<a href="/burned-out" id="burned-out">
+					<img class="home-img" src="/images/burned_out.jpg">
+					<p class="choice">I'm Burned Out</p>
 				</a>
 			</div>
 		</div>
