--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,8 +5,8 @@
 
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<!-- <link rel="stylesheet" type="text/css" href="/application.css"> -->
 		<link rel="stylesheet" type="text/css" href="<%= url("/stylesheets/application.css")%>">
+		<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
 	</head>
 	
 	<body>
