--- a/app/views/fired_up.erb
+++ b/app/views/fired_up.erb
@@ -1,1 +1,28 @@
-fired up
+<div class="container">
+	<div class="row">
+		<div class="col-md-4">
+			<div class="selection">
+				<a href="/i-can-help">
+					<img class="fired-choice-2-img" src="/images/helper.jpg">
+					<p class="fired-choice-2">I want to help out</p>
+				</a>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="selection">
+				<a href="/burned-out">
+					<img class="fired-choice-2-img" src="/images/light_bulb.jpg">
+					<p class="fired-choice-2">I have a great idea</p>
+				</a>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="selection">
+				<a href="/fired-up">
+					<img class="fired-choice-2-img" src="/images/telephones.jpg">
+					<p class="fired-choice-2">I'm ready to make some calls</p>
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
