--- a/app/views/fired_up.erb
+++ b/app/views/fired_up.erb
@@ -10,15 +10,15 @@
 		</div>
 		<div class="col-md-4">
 			<div class="selection">
-				<a href="/burned-out">
-					<img class="fired-choice-2-img" src="/images/light_bulb.jpg">
+				<a href="/i-have-an-idea">
+					<img class="fired-choice-2-img" src="/images/bulb.jpg">
 					<p class="fired-choice-2">I have a great idea</p>
 				</a>
 			</div>
 		</div>
 		<div class="col-md-4">
 			<div class="selection">
-				<a href="/fired-up">
+				<a href="/i-can-call">
 					<img class="fired-choice-2-img" src="/images/telephones.jpg">
 					<p class="fired-choice-2">I'm ready to make some calls</p>
 				</a>
