add images, routes

--- a/app/views/fired_up.erb
+++ b/app/views/fired_up.erb
@@ -1,28 +1,30 @@
-<div class="container">
-	<div class="row">
-		<div class="col-md-4">
-			<div class="selection">
-				<a href="/i-can-help">
-					<img class="fired-choice-2-img" src="/images/helper.jpg">
-					<p class="fired-choice-2">I want to help out</p>
-				</a>
+<body id="fired">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4">
+				<div class="selection">
+					<a href="/i-can-help">
+						<img class="fired-choice-2-img" src="/images/helper.jpg">
+						<p class="fired-choice-2">I want to help out</p>
+					</a>
+				</div>
 			</div>
-		</div>
-		<div class="col-md-4">
-			<div class="selection">
-				<a href="/i-have-an-idea">
-					<img class="fired-choice-2-img" src="/images/bulb.jpg">
-					<p class="fired-choice-2">I have a great idea</p>
-				</a>
+			<div class="col-md-4">
+				<div class="selection">
+					<a href="/i-can-call">
+						<img class="fired-choice-2-img" src="/images/telephones.jpg">
+						<p class="fired-choice-2">I'm ready to make some calls</p>
+					</a>
+				</div>
 			</div>
-		</div>
-		<div class="col-md-4">
-			<div class="selection">
-				<a href="/i-can-call">
-					<img class="fired-choice-2-img" src="/images/telephones.jpg">
-					<p class="fired-choice-2">I'm ready to make some calls</p>
-				</a>
+			<div class="col-md-4">
+				<div class="selection">
+					<a href="/i-have-an-idea">
+						<img class="fired-choice-2-img" src="/images/bulb.jpg">
+						<p class="fired-choice-2">I have a great idea</p>
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
+</body>
