--- a/app/views/help.erb
+++ b/app/views/help.erb
@@ -1,20 +1,22 @@
-<div class="container">
-	<div class="row">
-		<div class="col-md-6">
-			<div class="selection">
-				<a href="/fired-up">
-					<img class="home-img" src="/images/fired_up.jpg">
-					<p class="choice">I have time</p>
-				</a>
+<body id="help">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<div class="selection">
+					<a href="/fired-up">
+						<img class="fired-choice-3-img" src="/images/clock.jpg">
+						<p class="choice">I have time</p>
+					</a>
+				</div>
 			</div>
-		</div>
-		<div class="col-md-6">
-			<div class="selection">
-				<a href="/burned-out">
-					<img class="home-img" src="/images/burned_out.jpg">
-					<p class="choice">I have money</p>
-				</a>
+			<div class="col-md-6">
+				<div class="selection">
+					<a href="/burned-out">
+						<img class="fired-choice-3-img" src="/images/coins.jpg">
+						<p class="choice">I have money</p>
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
+</body>
