--- a/app/public/stylesheets/application.css
+++ b/app/public/stylesheets/application.css
@@ -1,11 +1,40 @@
 body {
-	background: url(/images/dark_flag.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
   text-align: center;
   font-weight: bold;
+}
+
+#home {
+	background: url(/images/dark_flag.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;	
+}
+
+#fired {
+	background: url(/images/field.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;	
+}
+
+#help {
+	background: url(/images/pencils.jpg) no-repeat center center fixed; 
+	/*filter: grayscale(100%);*/
+	-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;	
+}
+
+#call {
+	margin-top: 3% !important;
+	background: url(/images/tricycle.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;	
 }
 
 .container {
@@ -19,8 +48,27 @@ body {
 	text-decoration: none;
 }
 
+.call-choice {
+	max-height: 320px;
+	max-width: 320px;
+	margin-left: 30px;
+}
+
+.call-choice-img {
+	max-height: 80%;
+}
+
+.call-p {
+	margin-top: -170px;
+	font-size: 45px;
+}
+
 .home-img, .fired-choice-2-img {
 	width: 100%;
+}
+
+.fired-choice-3-img {
+	max-height: 350px;
 }
 
 .choice {
