--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,4 @@
+<body id="home">
 <div class="container">
 	<div class="row">
 		<div class="col-md-6">
@@ -18,3 +19,4 @@
 		</div>
 	</div>
 </div>
+</body>
