--- a/app/views/help.erb
+++ b/app/views/help.erb
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<div class="selection">
-					<a href="/fired-up">
+					<a href="/i-have-time">
 						<img class="fired-choice-3-img" src="/images/clock.jpg">
 						<p class="choice">I have time</p>
 					</a>
@@ -11,7 +11,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="selection">
-					<a href="/burned-out">
+					<a href="/i-have-money">
 						<img class="fired-choice-3-img" src="/images/coins.jpg">
 						<p class="choice">I have money</p>
 					</a>
