--- a/app/views/burned_out.erb
+++ b/app/views/burned_out.erb
@@ -1,1 +1,25 @@
-hi
+<body id="calm">
+	<div class="container">
+		<h3 id="burned-out">It's not easy working so hard to make a better world.  Take care of yourself.</h3>	
+
+		<div class="row" id="bo-row">
+			<div class="col-md-2"></div>
+			<a href="http://strong-as-hell.herokuapp.com/">
+				<div class="col-md-2 burned-out-option">
+					<p class="bo-text">Be inspired</p>
+				</div>
+			</a>
+			<a href="http://calmingmanatee.com/12">
+				<div class="col-md-2 burned-out-option">
+					<p class="bo-text">Keep your chin up</p>
+				</div>
+			</a>
+			<a href="http://www.yogajournal.com/slideshow/5-minute-morning-gratitude-practice/">
+				<div class="col-md-2 burned-out-option">
+					<p class="bo-text">Stretch it out</p>
+				</div>
+			</a>
+			<div class="col-md-2"></div>
+		</div>
+	</div>
+</body>
