add hover on home, looks like shit

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,6 +5,7 @@
 			<div class="selection">
 				<a href="/fired-up" id="fired-up">
 					<img class="home-img" src="/images/fired_up.jpg">
+					<p class="plain-text">I'm Fired Up</p>
 					<p class="choice">I'm Fired Up</p>
 				</a>
 			</div>
@@ -13,6 +14,7 @@
 			<div class="selection">
 				<a href="/burned-out" id="burned-out">
 					<img class="home-img" src="/images/burned_out.jpg">
+					<p class="plain-text">I'm Burned Out</p>
 					<p class="choice">I'm Burned Out</p>
 				</a>
 			</div>
