--- a/app/public/stylesheets/application.css
+++ b/app/public/stylesheets/application.css
@@ -15,6 +15,10 @@ a:hover {
 	margin-top: 10%;
 }
 
+.navbar-brand, .navbar-text, .footer-tagline {
+	font-family: 'Cabin Sketch', cursive;	
+}
+
 #home {
 	background: url(/images/dark_flag.jpg) no-repeat center center fixed; 
 	-webkit-background-size: cover;
@@ -32,7 +36,7 @@ a:hover {
 }
 
 #help {
-	background: url(/images/pencils.jpg) no-repeat center center fixed; 
+	background: url(/images/grass.jpg) no-repeat center center fixed; 
 	/*filter: grayscale(100%);*/
 	-webkit-background-size: cover;
   -moz-background-size: cover;
@@ -59,11 +63,23 @@ a:hover {
 }
 
 .selection {
+	position: relative;
 	height: 500px;
 	overflow: hidden;	
-	font-family: 'Special Elite', cursive;
+	/*font-family: 'Special Elite', cursive;*/
+	font-family: 'Cabin Sketch', cursive;
 	font-weight: bold;
 	text-decoration: none;
+	font-size: 55px;
+}
+
+.fired-up {
+	position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .call-choice {
@@ -89,9 +105,22 @@ a:hover {
 	max-height: 350px;
 }
 
+.plain-text {
+	margin-top: -220px;
+}
+
 .choice {
-	margin-top: -230px;
-	font-size: 55px;
+	position: absolute;
+	margin: 0;
+	max-height: 370px;
+	background-color: rgba(50, 50, 50, 0.5);
+	color: #fff;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 150px 0px 0px 0px;
+	display: none;
 }
 
 .fired-choice-2 {
@@ -99,11 +128,11 @@ a:hover {
 	font-size: 35px;
 }
 
-#burned-out:hover {
+#burned-out {
 	color: #0052A5;
 }
 
-#fired-up:hover {
+#fired-up {
 	color: #E0162B;
 }
 
