--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,9 +7,10 @@
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="<%= url("/stylesheets/application.css")%>">
+		<script src='<%= url("/javascripts/application.js")%>'></script>
 
 		<!-- fonts -->
-		<link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Special+Elite" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Cutive+Mono|Special+Elite" rel="stylesheet">
 	</head>
 	
 	<body>
