fix hover on help page

--- a/app/views/burned_out.erb
+++ b/app/views/burned_out.erb
@@ -1,6 +1,6 @@
 <body id="calm">
 	<div class="container">
-		<h3 id="burned-out">It's not easy working so hard to make a better world.  Take care of yourself.</h3>	
+		<h3 id="bo-header">Working so hard to make a better world isn't easy.  Take care of yourself.</h3>	
 
 		<div class="row" id="bo-row">
 			<div class="col-md-2"></div>
