--- a/app/views/help.erb
+++ b/app/views/help.erb
@@ -5,6 +5,7 @@
 				<div class="selection">
 					<a href="/i-have-time">
 						<img class="fired-choice-3-img" src="/images/clock.jpg">
+						<p class="plain-text">I have time</p>
 						<p class="choice">I have time</p>
 					</a>
 				</div>
@@ -13,6 +14,7 @@
 				<div class="selection">
 					<a href="/i-have-money">
 						<img class="fired-choice-3-img" src="/images/coins.jpg">
+						<p class="plain-text">I have money</p>
 						<p class="choice">I have money</p>
 					</a>
 				</div>
