--- a/app/public/stylesheets/application.css
+++ b/app/public/stylesheets/application.css
@@ -1,5 +1,5 @@
 body {
-	padding-top: 50px;
+	padding-top: 30px;
   text-align: center;
 }
 
@@ -73,15 +73,6 @@ a:hover {
 	font-size: 55px;
 }
 
-.fired-up {
-	position: absolute;
-  margin: auto;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
 .call-choice {
 	max-height: 320px;
 	max-width: 320px;
@@ -102,7 +93,7 @@ a:hover {
 }
 
 .fired-choice-3-img {
-	max-height: 350px;
+	max-height: 370px;
 }
 
 .plain-text {
@@ -113,6 +104,7 @@ a:hover {
 	position: absolute;
 	margin: 0;
 	max-height: 370px;
+	overflow: hidden;
 	background-color: rgba(50, 50, 50, 0.5);
 	color: #fff;
   top: 0;
@@ -138,7 +130,7 @@ a:hover {
 
 /*/////////BURNED OUT/////////*/
 
-#burned-out {
+#bo-header {
 	margin-top: -5%;
 }
 
